# analytical-modeling-debug

./: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake
include/: CMakeLists.txt  Makefile  Measurable.h  Metric.h  Sharable.h  flame.h  unit.h
src/flame/: CMakeLists.txt  Interconnect.cpp  Makefile  Measurable.cpp  Metric.cpp  Sharable.cpp  resource.cpp  unit.cpp
src/tasks/: CMakeLists.txt  Makefile  Tasks.cpp  Tasks.h
src/traverser/: Traverser.cpp  Traverser.h
tests/: unitTests.cpp
tests/test1/: CMakeLists.txt  Makefile  Test1.cpp  Test1.h  Test1App.json
tests/test2/: Test2.cpp  Test2.h  Test2App.json  Test2Assignment.json
tests/test3/: Test3.cpp  Test3.h  Test3App.json  Test3Assignment.json
